Rename MongoDB connection variable to MONGO_URL

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5001
-mongodb+srv://artha_username:hxQu4hST9SjGMkya@cluster0.8yje6.mongodb.net/?Artha-=Cluster0
+MONGO_URL=mongodb+srv://artha_username:hxQu4hST9SjGMkya@cluster0.8yje6.mongodb.net/?Artha-=Cluster0
 JWT_SECRET=any_long_random_string_here
 STRIPE_API_KEY=sk_test_your_real_stripe_key
